test-data/error/const-yawspeed-no-yawspeed.hltas
version 1
frames
s41-j-----|------|------|0.001|-|-|1